...
            "value": "Erneut versuchen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Try again"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Volver a intentar"
...
    "kavita.status %@": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Status: %@"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Status: %@"
...
            "value": "Bücher hinzufügen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Add books"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Añadir libros"
...
            "value": "Hinzufügen zu…"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Add to…"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Añadir a…"
...
            "value": "An Start anheften"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Pin to Home"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Fijar en Inicio"
...
            "value": "Regale"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Shelves"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Estanterías"
...
            "value": "Von Start lösen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Unpin from Home"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "No fijar en Inicio"
...
            "value": "Dateien und Ordner"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Files and folders"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Archivos y carpetas"
...
